引入 iconfont 图标组件

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -68,3 +68,12 @@ html{
     left: 0.2rem;
     z-index: 1000;
 }
+
+/* iconfont 图标库 */
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
